--- a/pcrepair/views/includes/navbar.jade
+++ b/pcrepair/views/includes/navbar.jade
@@ -8,5 +8,15 @@ nav.navbar.navbar-inverse.navbar-fixed-top
         span.icon-bar
       a.navbar-brand(href='#') PC Repair
     #navbar.navbar-collapse.collapse
+      ul.nav.navbar-nav
+        li(class=title=='Home'?'active':undefined)
+          a(href='/') Home
+        li(class=title=='About'?'active':undefined)
+          a(href='/about') About
+        li(class=title=='Services'?'active':undefined)
+          a(href='/services') Services
+        li(class=title=='Contact'?'active':undefined)
+          a(href='/contact') Contact
+
     // /.navbar-collapse
 
