--- a/pcrepair/views/layout.jade
+++ b/pcrepair/views/layout.jade
@@ -1,3 +1,6 @@
+- var HOMEPAGE = false
+block variables
+
 doctype html
 html
   head
@@ -7,7 +10,8 @@ html
     script(src='/javascripts/bootstrap.min.js')
   body
     include ./includes/navbar.jade
-    include ./includes/showcase.jade
+    if HOMEPAGE
+      include ./includes/showcase.jade
     .container
       // Example row of columns
       block content
