updated the images for lower size ones

--- a/profile/views/index.jade
+++ b/profile/views/index.jade
@@ -8,5 +8,5 @@ block content
     .main
         .container
             h1 Follow
-            p your passion. When work becomes fun, it is no longer work.
+            p your passion. When work is fun, it is no longer work.
 
