added key to google maps api

--- a/profile/views/contact.jade
+++ b/profile/views/contact.jade
@@ -45,5 +45,5 @@ block content
             var marker = new google.maps.Marker({position:myCenter});
             marker.setMap(map);
         }
-    script(src='https://maps.googleapis.com/maps/api/js?callback=myMap')
+    script(src='https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyDCBxLpq5dEaft6vrutk_hHjhm8gEadu5g&callback=myMap')
 
