--- a/profile/public/stylesheets/layout.css
+++ b/profile/public/stylesheets/layout.css
@@ -28,4 +28,52 @@ html, body {
 .footer {
     background-color: rgb(0, 166, 216) !important;
     border: 0px;
+    height: 70px;
+    padding: 10px 0;
+}
+
+footer .footer-social ul.list-inline {
+    margin: 0;
+}
+
+footer .footer-social ul.list-inline li a {
+    display: block;
+    height: 50px;
+    width: 50px;
+    line-height: 50px;
+    font-size: 25px;
+    border-radius: 100%;
+    color: white;
+}
+
+footer .footer-social ul.list-inline li.social-github a {
+    background-color: #333333;
+}
+
+footer .footer-social ul.list-inline li.social-github a:hover {
+    background-color: #262626;
+}
+
+footer .footer-social ul.list-inline li.social-twitter a {
+    background-color: #1da1f2;
+}
+
+footer .footer-social ul.list-inline li.social-twitter a:hover {
+    background-color: #0d95e8;
+}
+
+footer .footer-social ul.list-inline li.social-facebook a {
+    background-color: #3b5998;
+}
+
+footer .footer-social ul.list-inline li.social-facebook a:hover {
+    background-color: #344e86;
+}
+
+footer .footer-social ul.list-inline li.social-google-plus a {
+    background-color: #dd4b39;
+}
+
+footer .footer-social ul.list-inline li.social-google-plus a:hover {
+    background-color: #d73925;
 }
